# EV3-DriverStation

./: .gitignore  01_InstallDriverStation.bat  DriverStation.py  DriverStation.spec  DriverStationNoGUI.py  pyproject.toml
education/: initiation_programmation.ipynb  robot.ipynb  simple_ev3_api.py
src/EV3DriverStation/: DS.sh  __init__.py  app.py  controllers.py  controllers_manager.py  network.py  robot.py  robot_network.py  simple_api.py  telemetry.py  utils.py
src/EV3DriverStation/ui/: ControllerView.qml  ControllersPanel.qml  IconControllerStatus.qml  IconNetworkStatus.qml  IconRobotStatus.qml  NetworkPanel.qml  PanelSelector.qml  RobotPanel.qml  main.qml
src/EV3DriverStation/ui/CustomUI/: ControllerView.qml  DisableRect.qml  Entry.qml  Header.qml  HeaderButton.qml
