[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "EV3-DriverStation"
authors = [
    {name = "Dragons 3975"},
]
description = "Python GUI for remote control of EV3 unsing WPILib."
requires-python = ">=3.10"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pygame", "PySide6", "pyinstaller"
]
dynamic = ["version"]

[project.scripts]
EV3DriverStation = "DriverStation:start"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.black]
line-length = 120

[tool.ruff.isort]
known-first-party = ["fundus_vessels_toolkit"]
section-order = ["future", "standard-library", "third-party", "steered_cnn", "first-party", "local-folder"]

[tool.ruff.isort.sections]
"steered_cnn" = ["steered_cnn"]